chore: perf some build script

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "config": {
     "validate-commit-msg": {
       "types": [
-        "feat",
-        "create",
+        "todo",
+        "doing",
         "finish",
         "update",
         "chore"
