update: 现代浏览器渲染流水线

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     }
   },
   "devDependencies": {
+    "paper-mill": "^1.0.2",
     "pre-commit": "^1.2.2",
     "validate-commit-msg": "^2.11.2"
   }
