--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
   "main": "index.js",
   "scripts": {
     "paper": "papers paper",
-    "build": "papers build",
-    "commitmsg": "validate-commit-msg"
+    "build": "papers build"
   },
-  "pre-commit": [
-    "commitmsg"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jasonChen1982/blog.git"
@@ -36,7 +32,6 @@
   },
   "devDependencies": {
     "paper-mill": "^1.1.0",
-    "pre-commit": "^1.2.2",
-    "validate-commit-msg": "^2.11.2"
+    "validate-commit-msg": "^2.14.0"
   }
 }
